--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ find_package(simpleble REQUIRED)
 find_package(RocksDB REQUIRED)
 find_package(crowcpp REQUIRED)
 find_package(yamlcpp REQUIRED)
-
+find_package(modernsqlite REQUIRED)
 
 add_executable(hygrometer_core
     src/main.cpp
@@ -18,4 +18,5 @@ add_executable(hygrometer_core
     src/DataHandler.cpp
     src/ConfigHandler.cpp)
 target_include_directories(hygrometer_core SYSTEM PRIVATE include)
+target_include_directories(hygrometer_core PRIVATE ${modernsqlite_SOURCE_DIR}/hdr)
 target_link_libraries(hygrometer_core simpleble::simpleble RocksDB::rocksdb Crow::Crow yaml-cpp::yaml-cpp)
