update infdef, cleanup main, simplify conversion

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.15.0)
-project(hygrometer_core VERSION 0.1.0 LANGUAGES C CXX)
+project(smarthome_server VERSION 0.8.0 LANGUAGES C CXX)
 set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
 
 set(CMAKE_CXX_STANDARD 23)
@@ -11,12 +11,12 @@ find_package(crowcpp REQUIRED)
 find_package(yamlcpp REQUIRED)
 find_package(modernsqlite REQUIRED)
 
-add_executable(hygrometer_core
+add_executable(smarthome_server
     src/main.cpp
     src/BLEManager.cpp
-    src/utils.cpp
     src/DataHandler.cpp
-    src/ConfigHandler.cpp)
-target_include_directories(hygrometer_core SYSTEM PRIVATE include)
-target_include_directories(hygrometer_core PRIVATE ${modernsqlite_SOURCE_DIR}/hdr)
-target_link_libraries(hygrometer_core simpleble::simpleble RocksDB::rocksdb Crow::Crow yaml-cpp::yaml-cpp sqlite3)
+    src/ConfigHandler.cpp
+    src/CrowServer.cpp)
+target_include_directories(smarthome_server SYSTEM PRIVATE include)
+target_include_directories(smarthome_server PRIVATE ${modernsqlite_SOURCE_DIR}/hdr)
+target_link_libraries(smarthome_server simpleble::simpleble RocksDB::rocksdb Crow::Crow yaml-cpp::yaml-cpp sqlite3)
