remove dev dependency

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,6 @@ set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 find_package(simpleble REQUIRED)
-find_package(RocksDB REQUIRED)
 find_package(crowcpp REQUIRED)
 find_package(yamlcpp REQUIRED)
 find_package(modernsqlite REQUIRED)
@@ -19,4 +18,4 @@ add_executable(smarthome_server
     src/CrowServer.cpp)
 target_include_directories(smarthome_server SYSTEM PRIVATE include)
 target_include_directories(smarthome_server PRIVATE ${modernsqlite_SOURCE_DIR}/hdr)
-target_link_libraries(smarthome_server simpleble::simpleble RocksDB::rocksdb Crow::Crow yaml-cpp::yaml-cpp sqlite3)
+target_link_libraries(smarthome_server simpleble::simpleble Crow::Crow yaml-cpp::yaml-cpp sqlite3)
